; ModuleID = '/home/carl/AnghaBench/lede/target/linux/samsung/files-4.14/drivers/mtd/nand/extr_s5pxx_nand.c_s5p_nand_inithw.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/samsung/files-4.14/drivers/mtd/nand/extr_s5pxx_nand.c_s5p_nand_inithw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s5p_nand_host = type { i64 }

@S5P_NFCONT = common dso_local global i64 0, align 8
@S5P_NFCONT_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s5p_nand_host*)* @s5p_nand_inithw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s5p_nand_inithw(%struct.s5p_nand_host* %0) #0 {
  %2 = alloca %struct.s5p_nand_host*, align 8
  %3 = alloca i32, align 4
  store %struct.s5p_nand_host* %0, %struct.s5p_nand_host** %2, align 8
  %4 = load %struct.s5p_nand_host*, %struct.s5p_nand_host** %2, align 8
  %5 = getelementptr inbounds %struct.s5p_nand_host, %struct.s5p_nand_host* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @S5P_NFCONT, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @readl(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @S5P_NFCONT_MODE, align 4
  %12 = or i32 %10, %11
  %13 = load %struct.s5p_nand_host*, %struct.s5p_nand_host** %2, align 8
  %14 = getelementptr inbounds %struct.s5p_nand_host, %struct.s5p_nand_host* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @S5P_NFCONT, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @writel(i32 %12, i64 %17)
  ret void
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
